--- a/app/src/main/res/layout/layout_registration_step_four.xml
+++ b/app/src/main/res/layout/layout_registration_step_four.xml
@@ -91,6 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:hint="@string/enter_id_number"
+                android:inputType="text"
                 android:maxLength="25"
                 android:maxLines="1"
                 android:textColorHint="@color/color_gray_text"
