--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -56,6 +56,7 @@
                 android:inputType="phone"
                 android:maxLength="15"
                 android:maxLines="1"
+                android:hint="@string/phone_no"
                 android:textColorHint="@color/color_gray_text"
                 android:textColor="@color/textColors"
                 android:textSize="@dimen/_12sdp" />
