--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -45,20 +45,35 @@
             android:fontFamily="@font/montserrat"
             android:background="@color/screenBackground"
             android:justificationMode="inter_word"
-            app:layout_constraintBottom_toTopOf="@+id/camera_view"
+            app:layout_constraintBottom_toTopOf="@+id/rlImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
-        <io.fotoapparat.view.CameraView
-            android:id="@+id/cameraView"
+        <RelativeLayout
+            android:id="@+id/rlImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/txtInfo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/layoutBottom"/>
+            app:layout_constraintBottom_toTopOf="@+id/layoutBottom">
+
+
+            <com.app.l_pesa.common.CircularImageView
+                android:id="@+id/imageProfile"
+                android:layout_centerInParent="true"
+                android:layout_width="@dimen/_125sdp"
+                android:layout_height="@dimen/_125sdp"
+                android:background="@drawable/ic_user"
+                app:civ_border_width="0dp"
+                app:civ_background_color="@android:color/white"
+                app:civ_border_color="@android:color/white"
+                app:civ_shadow="false"
+               />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/layoutBottom"
@@ -68,7 +83,7 @@
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/camera_view"
+            app:layout_constraintTop_toBottomOf="@+id/rlImage"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
