--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -20,20 +20,35 @@
             android:fontFamily="@font/montserrat"
             android:background="@color/screenBackground"
             android:justificationMode="inter_word"
-            app:layout_constraintBottom_toTopOf="@+id/camera_view"
+            app:layout_constraintBottom_toTopOf="@+id/rlImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
-        <io.fotoapparat.view.CameraView
-            android:id="@+id/camera_view"
+    <RelativeLayout
+        android:id="@+id/rlImage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/layoutBottom">
+
+
+        <ImageView
+            android:id="@+id/imageCard"
+            android:contentDescription="@string/app_name"
+            android:layout_centerInParent="true"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtInfo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/layoutBottom"/>
+            android:layout_height="@dimen/_150sdp"
+            android:background="@drawable/ic_id_card"
+
+            />
+
+    </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/layoutBottom"
@@ -42,7 +57,7 @@
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/camera_view"
+            app:layout_constraintTop_toBottomOf="@+id/rlImage"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
