--- a/app/src/main/res/layout/layout_registration_step_three.xml
+++ b/app/src/main/res/layout/layout_registration_step_three.xml
@@ -59,7 +59,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_app_logo"
+            app:srcCompat="@drawable/ic_edit_image"
             android:layout_gravity="top|end"
 
             />
