--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -42,9 +42,8 @@
             android:id="@+id/imageCard"
             android:contentDescription="@string/app_name"
             android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_150sdp"
-            android:background="@drawable/ic_id_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
             />
 
