--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -42,8 +42,9 @@
             android:id="@+id/imageCard"
             android:contentDescription="@string/app_name"
             android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_250sdp"
+            android:layout_height="@dimen/_200sdp"
+            app:srcCompat="@drawable/ic_id_card"
 
             />
 
