--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -27,11 +27,11 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/your_otp_code"
                 android:textColor="@color/colorTextBlackLight"
-                android:textSize="@dimen/_13sdp"
+                android:textSize="@dimen/_12sdp"
                 android:gravity="center|start"
                 android:padding="@dimen/_2sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:justificationMode="inter_word"
                 app:layout_constraintTop_toTopOf="parent"
@@ -49,14 +49,14 @@
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:inputType="numberSigned"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorBlack"
                 android:textSize="@dimen/_14sdp"
                 android:cursorVisible="true"
                 android:focusable="true"
                 app:cursorWidth="1px"
-                app:cursorColor="@color/colorAppLight"
+                app:cursorColor="@color/colorGreyDeep"
                 app:itemCount="6"
-                app:lineColor="@color/colorAquaDeep"
+                app:lineColor="@color/colorGreyDeep"
                 app:itemSpacing="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@+id/txtHeader"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/resend_verification"
                 android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_11sdp"
+                android:textSize="@dimen/_12sdp"
                 android:gravity="center|end"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_25sdp"
