--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -23,22 +23,19 @@
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtHeader"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_85sdp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/your_otp_code"
-                android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_12sdp"
+                android:padding="@dimen/_3sdp"
+                android:textColor="@color/dark_text_color"
+                android:background="@color/screenBackground"
                 android:gravity="center|start"
-                android:padding="@dimen/_2sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
                 android:justificationMode="inter_word"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/otp_view"
-
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 />
 
             <com.app.l_pesa.common.OtpView
