--- a/app/src/main/res/layout/layout_registration_step_three.xml
+++ b/app/src/main/res/layout/layout_registration_step_three.xml
@@ -13,10 +13,11 @@
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtInfo"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_65sdp"
+        android:layout_height="@dimen/_85sdp"
         android:text="@string/email_verification"
-        android:textSize="@dimen/_11sdp"
+        android:textSize="@dimen/_12sdp"
         android:padding="@dimen/_3sdp"
+        android:gravity="center|start"
         android:textColor="@color/dark_text_color"
         android:fontFamily="@font/montserrat"
         android:background="@color/screenBackground"
