--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,7 +138,6 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/login"
         android:textAllCaps="true"
-        android:letterSpacing=".10"
         android:textSize="@dimen/_12sdp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
@@ -154,7 +153,7 @@
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:padding="@dimen/_2sdp"
         android:text="@string/forgot_pin"
         android:textSize="@dimen/_12sdp"
@@ -190,13 +189,12 @@
         android:gravity="center"
         android:layout_width="0dp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:text="@string/calculate_your_loan"
-        android:background="@drawable/bg_button_app"
+        android:background="@drawable/yellow_button"
         android:textColor="@color/colorWhite"
         android:fontFamily="@font/montserrat"
         android:textAllCaps="true"
-        android:letterSpacing=".10"
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         android:layout_marginStart="@dimen/_10sdp"
