--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:text="@string/starter_loan"
         android:textColor="@color/colorYellow"
-        android:textSize="@dimen/_18sdp"
+        android:textSize="@dimen/_20sdp"
         android:gravity="center"
         android:textStyle="bold"
         android:fontFamily="@font/montserrat"
@@ -57,12 +57,14 @@
     <com.app.l_pesa.common.CustomButtonRegular
         android:id="@+id/buttonSignUp"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_height="@dimen/_40sdp"
         android:background="@drawable/yellow_button"
         android:text="@string/get_started"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorWhite"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
+        android:textAllCaps="true"
         android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,13 +91,15 @@
     <com.app.l_pesa.common.CustomButtonRegular
         android:id="@+id/buttonLogin"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_marginBottom="@dimen/_25sdp"
         android:background="@drawable/bg_black_view"
         android:text="@string/sign_in"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
+        android:textAllCaps="true"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorSemiWhite"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
