--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -14,12 +14,13 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_85sdp"
             android:text="@string/email_verification"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_11sdp"
             android:padding="@dimen/_3sdp"
             android:gravity="center|start"
             android:textColor="@color/dark_text_color"
             android:fontFamily="@font/montserrat"
-            android:background="@color/screenBackground"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:justificationMode="inter_word"
             app:layout_constraintBottom_toTopOf="@+id/rlImage"
             app:layout_constraintEnd_toEndOf="parent"
