--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -15,11 +15,12 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/_85sdp"
         android:text="@string/email_verification"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_11sdp"
         android:padding="@dimen/_3sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/dark_text_color"
-        android:background="@color/screenBackground"
         android:gravity="center|start"
         android:justificationMode="inter_word"
         app:layout_constraintBottom_toTopOf="@+id/tilPhone"
