--- a/app/src/main/res/layout/layout_filter_by_date.xml
+++ b/app/src/main/res/layout/layout_filter_by_date.xml
@@ -237,15 +237,17 @@
 
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonFilterSubmit"
-                android:layout_width="@dimen/_150sdp"
+                android:layout_width="0dp"
                 android:layout_height="@dimen/_35sdp"
                 android:textSize="@dimen/_12sdp"
                 android:background="@drawable/ripple_green_button"
                 android:text="@string/apply_filter"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                app:layout_constraintTop_toBottomOf="@+id/viewDividerTwo"
                 android:textColor="@color/colorPrimaryDark"
+                app:layout_constraintTop_toBottomOf="@+id/viewDividerTwo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
