--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:inputType="phone"
+                android:inputType="numberSigned"
                 android:maxLength="15"
                 android:maxLines="1"
                 android:hint="@string/phone_no"
