--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -109,7 +109,7 @@
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/btn_round"
             android:fontFamily="@font/montserrat"
-            android:text="@string/calculate_your_loan"
+            android:text="@string/loan_calculate"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
@@ -117,6 +117,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll_loan_type"
+            app:layout_constraintBottom_toTopOf="@+id/view_divider"
 
 
             />
